# django-firestore-session-engine

./: README.md  pyproject.toml
src/django_firestore_session_engine/: apps.py  cfg.py  engine.py
